apollo-router/src/plugins/demand_control/cost_calculator/snapshots/apollo_router__plugins__demand_control__cost_calculator__schema_aware_response__tests__fragment_response_zipper.snap
---
source: apollo-router/src/plugins/demand_control/cost_calculator/schema_aware_response.rs
expression: "zipped.expect(\"expected zipped response\")"
---
ships:
  type: Query
  field: ships
  items:
    - type: Query
      field: ships
      children:
        owner:
          type: Ship
          field: owner
          children:
            name:
              type: User
              field: name
              value: Kate Chopin
            licenseNumber:
              type: User
              field: licenseNumber
              value: 1
    - type: Query
      field: ships
      children:
        owner:
          type: Ship
          field: owner
          children:
            licenseNumber:
              type: User
              field: licenseNumber
              value: 2
            name:
              type: User
              field: name
              value: Paul Auster
users:
  type: Query
  field: users
  items:
    - type: Query
      field: users
      children:
        name:
          type: User
          field: name
          value: Kate Chopin
        licenseNumber:
          type: User
          field: licenseNumber
          value: 1
    - type: Query
      field: users
      children:
        licenseNumber:
          type: User
          field: licenseNumber
          value: 2
        name:
          type: User
          field: name
          value: Paul Auster
