apollo-router/src/plugins/demand_control/cost_calculator/snapshots/apollo_router__plugins__demand_control__cost_calculator__schema_aware_response__tests__response_zipper.snap
---
source: apollo-router/src/plugins/demand_control/cost_calculator/schema_aware_response.rs
expression: "zipped.expect(\"expected zipped response\")"
---
ships:
  field: ships
  items:
    - children:
        name:
          field: name
          type: Ship
          value: Boaty McBoatface
        registrationFee:
          field: registrationFee
          type: Ship
          value: 200
      field: ships
      type: Query
    - children:
        name:
          field: name
          type: Ship
          value: HMS Grapherson
        registrationFee:
          field: registrationFee
          type: Ship
          value: 150
      field: ships
      type: Query
  type: Query
